syntax = "proto3";
option go_package = "code-analyser/protos/pb/output/languageSpecific";

message EnvOutput{
  //  checker
  bool envUsed = 1;
  //  values
  map<string, string> values = 2;
  // variables
  string variable = 4;
}

