syntax = "proto3";
option go_package = "./protos";


message AppserverOutput{
  // check appserver
  bool used = 1;
  // list of appserver
  repeated Appserver appServers = 2;
}
message Appserver{
  //  name of appserver
  string name = 1;
  //  version of appserver
  string version = 2;
}