syntax = "proto3";
option go_package = ".;protos";


message StaticAssetsOutput{
  // check orm
  bool used = 1;
  // list of all orms
  repeated Assets assetes = 2;
}
message Assets{
  //  name of db
  string name = 1;
  //  version of db
  int64 url = 2;
}

